...
                                action: { displayGenderPicker = true },
                                label:  { Label(profile.gender.rawValue.capitalized, systemImage: "person.fill") }
                            )
                            .sheet(isPresented: $displayGenderPicker, onDismiss: { profile.updatePatient() }) {
                                GenderSheet(userGender: $profile.gender).presentationDetents([.height(200)])
                            }
                            .accessibilityIdentifier("Profile_GenderButton")
                            // User Height
                            Button(
                                action: { displayHeightPicker = true },
                                label:  { Label(measureComposer(value: profile.height, unit: .cm), systemImage: "ruler.fill") }
                            )
                            .sheet(isPresented: $displayHeightPicker, onDismiss: { profile.updatePatient() }) {
                                HeightSheet(userHeight: $profile.height).presentationDetents([.height(200)])
                            }
                            .accessibilityIdentifier("Profile_HeightButton")
                            // User Weight
                            Button(
                                action: { displayWeightPicker = true },
                                label:  { Label(measureComposer(value: profile.weight, unit: .kg), systemImage: "scalemass.fill") }
                            )
                            .sheet(isPresented: $displayWeightPicker, onDismiss: { profile.updatePatient() }) {
                                WeightSheet(userWeight: $profile.weight).presentationDetents([.height(200)])
                            }
                            .accessibilityIdentifier("Profile_WeightButton")
                            // User Birthdate
                            Button(
                                action: { displayBirthdatePicker = true },
                                label:  { Label(profile.birthday.formatted(.dateTime.day().month(.wide).year()).capitalized, systemImage: "calendar") }
                            )
                            .sheet(isPresented: $displayBirthdatePicker, onDismiss: { profile.updatePatient() }) {
                                BirthdateSheet(birthdate: $profile.birthday).presentationDetents([.height(200)])
                            }
                            .accessibilityIdentifier("Profile_BirthdayButton")
                            // User Pathologies
                            NavigationLink(destination : PathologiesView()) {
                                Label("Pathologies", systemImage: "allergens.fill")
                            }
                            .accessibilityIdentifier("Profile_PathologiesButton")
                        }
                        .labelStyle(Cubic())
                        .listRowInsets(EdgeInsets(top: 8, leading: 8, bottom: 8, trailing: 8))
                        .listRowSeparator(.hidden)
                        
                        // OTHER section
...
                            .accessibility(identifier: "SignOut")
                        }
                        .listRowInsets(EdgeInsets(top: 8, leading: 8, bottom: 8, trailing: 8))
                        .listRowSeparator(.hidden)
                    }
                    .scrollContentBackground(.hidden)
                    .accessibility(identifier: "ProfileList")
                    .scrollIndicators(.hidden)
                    .navigationTitle("Profile")
                    .refreshable(action: { profile.getPatient(force_reload: false) })
                    .toolbar {
                        Button(
                            action: { displayInformationSheet = true },
...
